--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 *~
+*.pickle
+*.txt
+*.c
+*.s
 __pycache__/
 build/
 data.py
@@ -13,5 +17,5 @@ tes.sh
 correspond_table.txt
 log/
 save_models/
-tes.c
 data.pickle
+
